--- a/IT-prosjekt Nattklubb/index.HTML
+++ b/IT-prosjekt Nattklubb/index.HTML
@@ -29,7 +29,8 @@
 
             
             <div id="main">
-                <p1>Velkommen til Blackout ... </p1>                
+                <p1>Velkommen til Blackout ... 
+                Ditt livs oplevelse</p1>                
             </div>
 
             <div id="sidebar">
