--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
             
             <div id="main">
-                <p1>Velkommen til Blackout ... </p1>                
+                <p1>Velkommen til Blackout ... 
+                hei, funker dette?</p1>                
             </div>
 
             <div id="sidebar">
