--- a/index.html
+++ b/index.html
@@ -28,18 +28,14 @@
             </nav>
 
             
-            <div id="main">
-                <p1>Velkommen til Blackout ... 
-                hei, funker dette?</p1>                
-            </div>
-
-            <div id="sidebar">
-                <h2>Kommende Arrangementer</h2>
-            </div>
-            
-            <footer>
-
-            </footer>
+       <div class="grid-container">
+              <div class="Footer"></div>
+              <div class="Header"></div>
+              <div class="Meny"></div>
+              <div class="Events"></div>
+              <div class="Ads"></div>
+              <div class="Main"></div>
+        </div>
         </article>
     </body>
    
