--- a/index.html
+++ b/index.html
@@ -6,38 +6,37 @@
         <link rel="stylesheet" href="stilark.css"> 
     </head>
     <body>
-        <article>
-            <header>
-                <figure>
-                    <img src="">
-                </figure>
-                <h1>Blackout</h1>
-            </header>
-
-            <nav>
-                <ul>
-                    <li><a href="">Utleie</a></li>
-                    <li><a href="">Jobbsøknad</a></li>
-                    <li><a href="">Underholdning</a></li>
-                    <li><a href="">Arrangement</a></li>
-                    <li><a href="">Tatoveringstudio</a></li>
-                    <li><a href="">Ansatte</a></li>
-                    <li><a href="https://www.google.no/maps/place/Nedberget+25,+5178+Loddefjord/@60.3829326,5.2294509,17z/data=!3m1!4b1!4m5!3m4!1s0x463cfb7ccd604597:0xf642da957523df9b!8m2!3d60.3829326!4d5.2316396">Kart</a></li>
-                    <li><a href="">Kontakt oss</a></li>
-                  </ul>
-            </nav>
-
-            
-       <div class="grid-container">
-              <div class="Footer"></div>
-              <div class="Header"></div>
-              <div class="Meny"></div>
-              <div class="Events"></div>
-              <div class="Ads"></div>
-              <div class="Main"></div>
+        <div class="grid-container">
+            <div class="Header">
+                    <header>
+                        <figure>
+                            <img src="">
+                        </figure>
+                        <h1>Blackout</h1>
+                    </header>
+              </div>
+              <div class="Meny">
+                     <nav>
+                        <ul>
+                            <li><a href="">Utleie</a></li>
+                            <li><a href="">Jobbsøknad</a></li>
+                            <li><a href="">Underholdning</a></li>
+                            <li><a href="">Arrangement</a></li>
+                            <li><a href="">Tatoveringstudio</a></li>
+                            <li><a href="">Ansatte</a></li>
+                            <li><a href="https://www.google.no/maps/place/Nedberget+25,+5178+Loddefjord/@60.3829326,5.2294509,17z/data=!3m1!4b1!4m5!3m4!1s0x463cfb7ccd604597:0xf642da957523df9b!8m2!3d60.3829326!4d5.2316396">Kart</a></li>
+                            <li><a href="">Kontakt oss</a></li>
+                          </ul>
+                      </nav>
+              </div>
+              <div class="Events">
+              </div>
+              <div class="Ads">
+              </div>
+              <div class="Main">
+              </div>
+              <div class="Footer">
+              </div>
         </div>
-        </article>
     </body>
-   
-
 </html>
