--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div class="grid-container">
             <div class="Header">
-                    <header>
+                    <header id="grad1">
                         <figure>
                             <img src="">
                         </figure>
