--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
                         <figure>
                             <img src="">
                         </figure>
-                        <h1>Blackout
-                            hei
-                        </h1>
+                        <h1>Blackout</h1>
                     </header>
               </div>
               <div class="Meny">
