--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     </head>
     <body>
         <div class="grid-container">
-            <div class="Header">
-                    <figure>
-                        <img src="">
-                    </figure>
+            <div class="Header" id="start">
                     <h1>Blackout</h1>
               </div>
               <div class="Meny">
