--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="grid-container">
-            <div class="Header">
+            <div class="Header"id="grad1">
                     <h1>Blackout</h1>
               </div>
               <div class="Meny">
