--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
               <div class="Meny">
                      <nav>
                         <ul>
-                            <li><a href="">Utleie</a></li>
-                            <li><a href="">Jobbsøknad</a></li>
-                            <li><a href="">Underholdning</a></li>
-                            <li><a href="">Arrangement</a></li>
-                            <li><a href="">Tatoveringstudio</a></li>
-                            <li><a href="">Ansatte</a></li>
+                            <li><a href="Undersider/Utleie.html">Utleie</a></li>
+                            <li><a href="Undersider/Underholdning.html">Underholdning</a></li>
+                            <li><a href="Undersider/Arrangement.html">Arrangement</a></li>
+                            <li><a href="Undersider/Tatovering.html">Tatoveringstudio</a></li>
+                            <li><a href="Undersider/OmOss.html">Om oss</a></li>
                             <li><a href="https://www.google.no/maps/place/Nedberget+25,+5178+Loddefjord/@60.3829326,5.2294509,17z/data=!3m1!4b1!4m5!3m4!1s0x463cfb7ccd604597:0xf642da957523df9b!8m2!3d60.3829326!4d5.2316396">Kart</a></li>
-                            <li><a href="">Kontakt oss</a></li>
+                            <li><a href="Undersider/KontaktOss.html">Kontakt oss</a></li>
                           </ul>
                       </nav>
                     </div>
