--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 
             <div class="Meny">
                 <nav>
-                   <ul>
-                       <li><a href="Undersider/Utleie.html">Utleie</a></li>
-                       <li><a href="Undersider/Underholdning.html">Underholdning</a></li>
-                       <li><a href="Undersider/Arrangement.html">Arrangement</a></li>
-                       <li><a href="Undersider/Tatovering.html">Tatoveringstudio</a></li>
-                       <li><a href="Undersider/OmOss.html">Om oss</a></li>
-                       <li><a href="https://www.google.no/maps/place/Nedberget+25,+5178+Loddefjord/@60.3829326,5.2294509,17z/data=!3m1!4b1!4m5!3m4!1s0x463cfb7ccd604597:0xf642da957523df9b!8m2!3d60.3829326!4d5.2316396">Kart</a></li>
-                       <li><a href="Undersider/KontaktOss.html">Kontakt oss</a></li>
-                     </ul>
+                    <ul>
+                        <li><a href="index.html">Hjem</a></li>
+                        <li><a href="Utleie.html">Utleie</a></li>
+                        <li><a href="Underholdning.html">Underholdning</a></li>
+                        <li><a href="Arrangement.html">Arrangement</a></li>
+                        <li><a href="Tatovering.html">Tatoveringstudio</a></li>
+                        <li><a href="OmOss.html">Om oss</a></li>
+                        <li><a href="https://www.google.no/maps/place/Nedberget+25,+5178+Loddefjord/@60.3829326,5.2294509,17z/data=!3m1!4b1!4m5!3m4!1s0x463cfb7ccd604597:0xf642da957523df9b!8m2!3d60.3829326!4d5.2316396">Kart</a></li>
+                        <li><a href="KontaktOss.html">Kontakt oss</a></li>
+                      </ul>
                  </nav>
             </div>
 
