--- a/index.html
+++ b/index.html
@@ -36,7 +36,75 @@
 
                 <div class="Side">
                     <h1>Arrangement:</h1>
-                    <p> Kalender</p>
+                    
+                    <div class="calendar">
+                        <div class="timeline">
+                          <div class="spacer"></div>
+                        </div>
+                        <div class="days">
+                          <div class="day mon">
+                            <div class="date">
+                              <p class="date-num">9</p>
+                              <p class="date-day">Tor</p>
+                            </div>
+                            <div class="events">
+                              <div class="event start-2 end-5 securities">
+                                <p class="title">Securities Regulation</p>
+                                <p class="time">2 PM - 5 PM</p>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="day tues">
+                            <div class="date">
+                              <p class="date-num">12</p>
+                              <p class="date-day">Fre</p>
+                            </div>
+                            <div class="events">
+                              <div class="event start-10 end-12 corp-fi">
+                                <p class="title">Corporate Finance</p>
+                                <p class="time">10 AM - 12 PM</p>
+                              </div>
+                              <div class="event start-1 end-4 ent-law">
+                                <p class="title">Entertainment Law</p>
+                                <p class="time">1PM - 4PM</p>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="day wed">
+                            <div class="date">
+                              <p class="date-num">11</p>
+                              <p class="date-day">Lør</p>
+                            </div>
+                            <div class="events">
+                              <div class="event start-12 end-1 writing">
+                                <p class="title">Writing Seminar</p>
+                                <p class="time">11 AM - 12 PM</p>
+                              </div>
+                              <div class="event start-2 end-5 securities">
+                                <p class="title">Securities Regulation</p>
+                                <p class="time">2 PM - 5 PM</p>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="day thurs">
+                            <div class="date">
+                              <p class="date-num">12</p>
+                              <p class="date-day">Søn</p>
+                            </div>
+                            <div class="events">
+                              <div class="event start-10 end-12 corp-fi">
+                                <p class="title">Corporate Finance</p>
+                                <p class="time">10 AM - 12 PM</p>
+                              </div>
+                              <div class="event start-1 end-4 ent-law">
+                                <p class="title">Entertainment Law</p>
+                                <p class="time">1PM - 4PM</p>
+                              </div>
+                            </div>
+                          </div>
+                          </div>
+                        </div>
+                      </div>
 
                 </div>
                 <div class="Bilder">
