kalender + ufullstendig flexbox

--- a/index.html
+++ b/index.html
@@ -42,63 +42,55 @@
                           <div class="spacer"></div>
                         </div>
                         <div class="days">
-                          <div class="day mon">
+                          <div class="day">
                             <div class="date">
                               <p class="date-num">9</p>
                               <p class="date-day">Tor</p>
                             </div>
                             <div class="events">
-                              <div class="event start-2 end-5 securities">
-                                <p class="title">Securities Regulation</p>
-                                <p class="time">2 PM - 5 PM</p>
+                              <div class="event start-5 end-9">
+                                <p class="title"> Norge vs. Nederland</p>
+                                <p class="time"> 16.00 - 22.00</p>
                               </div>
                             </div>
                           </div>
-                          <div class="day tues">
+                          <div class="day">
                             <div class="date">
                               <p class="date-num">10</p>
                               <p class="date-day">Fre</p>
                             </div>
                             <div class="events">
-                              <div class="event start-10 end-12 corp-fi">
-                                <p class="title">Corporate Finance</p>
-                                <p class="time">10 AM - 12 PM</p>
-                              </div>
-                              <div class="event start-1 end-4 ent-law">
-                                <p class="title">Entertainment Law</p>
-                                <p class="time">1PM - 4PM</p>
+                              <div class="event start-6 end-10">
+                                <p class="title">OPEN STAGE</p>
+                                <p class="time">19.00 - 02.00</p>
                               </div>
                             </div>
                           </div>
-                          <div class="day wed">
+                          <div class="day">
                             <div class="date">
                               <p class="date-num">11</p>
                               <p class="date-day">Lør</p>
                             </div>
                             <div class="events">
-                              <div class="event start-12 end-1 writing">
-                                <p class="title">Writing Seminar</p>
-                                <p class="time">11 AM - 12 PM</p>
+                              <div class="event start-2 end-5">
+                                <p class="title">QUIZ</p>
+                                <p class="time">10.00 - 16.00</p>
                               </div>
-                              <div class="event start-2 end-5 securities">
-                                <p class="title">Securities Regulation</p>
-                                <p class="time">2 PM - 5 PM</p>
+                              <div class="event start-6 end-10">
+                                <p class="title"> LATE NIGHT</p>
+                                <p class="time">19.00 - 02.00</p>
                               </div>
                             </div>
                           </div>
-                          <div class="day thurs">
+                          <div class="day">
                             <div class="date">
                               <p class="date-num">12</p>
                               <p class="date-day">Søn</p>
                             </div>
                             <div class="events">
-                              <div class="event start-10 end-12 corp-fi">
-                                <p class="title">Corporate Finance</p>
-                                <p class="time">10 AM - 12 PM</p>
-                              </div>
-                              <div class="event start-1 end-4 ent-law">
-                                <p class="title">Entertainment Law</p>
-                                <p class="time">1PM - 4PM</p>
+                              <div class="event start-2 end-8">
+                                <p class="title">Privat booking</p>
+                                <p class="time">10.00 - 20.00</p>
                               </div>
                             </div>
                           </div>
@@ -111,7 +103,24 @@
                     <p>picture time</p>
                 </div>
                 <div class="Footer">
-                    <p>laget av oss</p>
+                  <p> Logo</p>
+                  <table>
+                    <tr>
+                    <th>Kontakt oss:</th>
+                  </tr>
+                  <tr>
+                    <td>Email</td>
+                    <td>MAIL</td>
+                  </tr>
+                  <tr>
+                    <td>Telefon</td>
+                    <td>90225158</td>
+                  </tr>
+                  <tr>
+                    <td>Adresse</td>
+                    <td>ADRESSE</td>
+                  </tr>
+                  </table>
                 </div>
         </div>
     </body>
