--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
                     <p>picture time</p>
                 </div>
                 <div class="Footer">
-                  <p> Logo</p>
                   <table>
                     <tr>
                     <th>Kontakt oss:</th>
@@ -121,6 +120,9 @@
                     <td>ADRESSE</td>
                   </tr>
                   </table>
+                
+                  <p> Logo</p>
+                </div>
                 </div>
         </div>
     </body>
