--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="grid-container">
 
-            <div class="Meny">
+            <div class="Meny" id="myTopnav">
                 <nav>
                     <ul>
                         <li><a href="index.html">Hjem</a></li>
