--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
                 <nav>
                     <ul>
                         <li><a href="index.html">Hjem</a></li>
+                        <li><a href="Underholdning.html">Events/Underholdning</a></li>
                         <li><a href="Utleie.html">Utleie</a></li>
-                        <li><a href="Underholdning.html">Underholdning</a></li>
-                        <li><a href="Arrangement.html">Arrangement</a></li>
                         <li><a href="KontaktOss.html">Kontakt oss</a></li>
                       </ul>
                  </nav>
