--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <div class="Meny" id="myTopnav">
                 <nav>
                     <ul>
-                        <li><a href="index.html">Hjem</a></li>
                         <li><a href="Underholdning.html">Events/Underholdning</a></li>
                         <li><a href="Utleie.html">Utleie</a></li>
+                        <li><a href="Meny.html">Meny</a></li>
                         <li><a href="KontaktOss.html">Kontakt oss</a></li>
                       </ul>
                  </nav>
