--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <ul>
                         <li><a href="Underholdning.html">Events/Underholdning</a></li>
                         <li><a href="Utleie.html">Utleie</a></li>
-                        <li><a href="Meny.html">Meny</a></li>
+                        <li><a href="Meny.php">Meny</a></li>
                         <li><a href="KontaktOss.html">Kontakt oss</a></li>
                       </ul>
                  </nav>
