--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
     <body>
         <div class="grid-container">
-
-            <div class="Meny" id="myTopnav">
+            <div class="Meny" id="navbar">
                 <nav>
                     <ul>
+                        <li><a href="index.html" id="logo">Logo</a></li>
                         <li><a href="Underholdning.html">Events/Underholdning</a></li>
                         <li><a href="Utleie.html">Utleie</a></li>
                         <li><a href="Meny.php">Meny</a></li>
@@ -19,6 +19,20 @@
                       </ul>
                  </nav>
             </div>
+            <script>
+              // When the user scrolls down 80px from the top of the document, resize the navbar's padding and the logo's font size
+              window.onscroll = function() {scrollFunction()};
+              
+              function scrollFunction() {
+                if (document.body.scrollTop > 80 || document.documentElement.scrollTop > 80) {
+                  document.getElementById("navbar").style.padding = "0px 0px";
+                  document.getElementById("logo").style.fontSize = "30px";
+                } else {
+                  document.getElementById("navbar").style.padding = "0px 0px";
+                  document.getElementById("logo").style.fontSize = "55px";
+                }
+              }
+              </script>
 
             <div class="Header"id="grad1">
                     <h1></h1>
