--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
             <div class="Meny" id="navbar">
                 <nav>
                     <ul>
-                        <li><a href="index.html" id="logo">Logo</a></li>
+                      <div id="logo">
+                        <li><a href="index.html">Logo</a></li>
+                      </div>
+                      <div id="meny">
                         <li><a href="Underholdning.html">Events/Underholdning</a></li>
                         <li><a href="Utleie.html">Utleie</a></li>
                         <li><a href="Meny.php">Meny</a></li>
                         <li><a href="KontaktOss.html">Kontakt oss</a></li>
+                      </div>
                       </ul>
                  </nav>
             </div>
