--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <nav>
                     <ul>
                       <div id="logo">
-                        <li><a href="index.html">Logo</a></li>
+                        <li><a href="index.html"></a></li>
                       </div>
                       <div id="meny">
                         <li><a href="Underholdning.html">Events/Underholdning</a></li>
@@ -33,7 +33,7 @@
                   document.getElementById("logo").style.fontSize = "30px";
                 } else {
                   document.getElementById("navbar").style.padding = "0px 0px";
-                  document.getElementById("logo").style.fontSize = "55px";
+                  document.getElementById("logo").style.fontSize = "60px";
                 }
               }
               </script>
