--- a/Underholdning.html
+++ b/Underholdning.html
@@ -26,8 +26,8 @@
               </div>
               
                 <div class="Main">
-                    <p> Velkommen til Blackout
-                        .....
+                    <p> Her hos Blackout er det alltid en ny opplevelse i vente. Vi tilbyr alt fra stand-up til live musikk til fotballkamper. Det er alltid nye temauker 
+                        
                     </p>
                 </div>
 
