--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
             <div class="Meny" id="navbar">
                 <nav>
                     <ul>
-                      <div id="logo">
-                        <li><a href="index.html"></a></li>
-                      </div>
+                        <li id="logo"><a href="index.html"> <img src="" alt=""></a></li>
                       <div id="meny">
                         <li><a href="Underholdning.html">Events/Underholdning</a></li>
                         <li><a href="Utleie.html">Utleie</a></li>
@@ -30,10 +28,12 @@
               function scrollFunction() {
                 if (document.body.scrollTop > 80 || document.documentElement.scrollTop > 80) {
                   document.getElementById("navbar").style.padding = "0px 0px";
-                  document.getElementById("logo").style.fontSize = "30px";
+                  document.getElementById("logo").style.width = "300px";
+                  document.getElementById("logo").style.height="120px";
                 } else {
                   document.getElementById("navbar").style.padding = "0px 0px";
-                  document.getElementById("logo").style.fontSize = "60px";
+                  document.getElementById("logo").style.width = "350px";
+                  document.getElementById("logo").style.height="150px";
                 }
               }
               </script>
