--- a/Utleie.html
+++ b/Utleie.html
@@ -39,7 +39,7 @@
               </script>
 
             <div class="Header"id="grad1">
-                    <h1></h1>
+                    <h1>Utleie</h1>
               </div>
               
                 <div class="Main">
