--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               </script>
 
             <div class="Header"id="grad1">
-                    <h1></h1>
+                    <h1>Blackout</h1>
               </div>
               
                 <div class="Main">
@@ -111,9 +111,10 @@
                           </div>
                         </div>
                         <div class="kart">
-                        <iframe width="500" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=bergen&t=&z=13&ie=UTF8&iwloc=&output=embed">
+                    <iframe width="500" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=bergen&t=&z=13&ie=UTF8&iwloc=&output=embed">
                         frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
                     </iframe>
+
                     <p>Blackout,<br>
                         Bergenveien 1,<br>
                         5071 Bergen
