--- a/Underholdning.html
+++ b/Underholdning.html
@@ -115,7 +115,7 @@
                           </div>
                         </div>
                         <div class="kart">
-                        <iframe width="500" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=bergen&t=&z=13&ie=UTF8&iwloc=&output=embed">
+                        <iframe width="500" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=bergen&t=&z=13&ie=UTF8&iwloc=&output=embed"
                         frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
                     </iframe>
                     <p>Blackout,<br>
