--- a/Utleie.html
+++ b/Utleie.html
@@ -51,10 +51,11 @@
                 <div class="Side">
                     
                     <div class="kart">
-                      <iframe width="500" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=bergen&t=&z=13&ie=UTF8&iwloc=&output=embed">
+                      <iframe width="500" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=bergen&t=&z=13&ie=UTF8&iwloc=&output=embed"
                           frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
                       </iframe>
-                    <p>Blackout,<br>
+
+                    <p> Blackout,<br>
                         Bergenveien 1,<br>
                         5071 Bergen
                     </p>
