--- a/Underholdning.html
+++ b/Underholdning.html
@@ -148,7 +148,7 @@
                   </tr>
                   </table>
                 
-                  <p> Logo</p>
+                  <p id="logo"><a href="index.html"></a></p>
                 </div>
                 </div>
         </div>
