--- a/KontaktOss.html
+++ b/KontaktOss.html
@@ -82,7 +82,7 @@
                   </tr>
                   </table>
                 
-                  <p> Logo</p>
+                  <p id="logo"><a href="index.html"></a></p>
                 </div>
                 </div>
         </div>
