--- a/Utleie.html
+++ b/Utleie.html
@@ -83,7 +83,7 @@
                   </tr>
                   </table>
                 
-                  <p> Logo</p>
+                  <p id="logo"><a href="index.html"></a></p>
                 </div>
                 </div>
         </div>
