--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                   </tr>
                   </table>
                 
-                  <p> Logo</p>
+                  <p id="logo"><a href="index.html"></a></p>
                 </div>
                 </div>
         </div>
